--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@types/node": "^17.0.45",
     "@types/react": "^18.0.18",
     "@types/react-dom": "^18.0.6",
+    "@types/uuid": "^8.3.4",
     "clsx": "^1.2.1",
     "prettier": "^2.7.1",
     "react": "^18.2.0",
@@ -22,6 +23,7 @@
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
     "typescript": "^4.7.4",
+    "uuid": "^9.0.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
